# pylinuxauto

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: index.md  快速开始.md  简介.md  问题.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/style/: var.css
docs/指南/: OCR识别.md  README.md  图像识别.md  属性定位.md  相对位移定位.md  键鼠操作.md  问题.md
docs/规划/: OCR识别设计方案.md  图像识别设计方案.md  键鼠设计方案.md
pylinuxauto/: __init__.py  __version__.py  config.py  exceptions.py  screenshot.py  sh.py
pylinuxauto/attr/: __init__.py  depends.py
pylinuxauto/attr/dogtail/: config.py  distro.py  errors.py  i18n.py  logging.py  predicate.py  procedural.py  rawinput.py  sessions.py  tc.py  tree.py  utils.py
pylinuxauto/attr/sniff/: sniff.py
pylinuxauto/image/: __init__.py  depends.py  image_base.py  server.py
pylinuxauto/mousekey/: __init__.py  _pyautogui_x11.py  mkmixin.py  pyautogui.py
pylinuxauto/ocr/: __init__.py  ocr_base.py  server.py
pylinuxauto/ui/: __init__.py  depends.py  ui_base.py  wayland_wininfo.py
tests/: test.py  test_attr.py  test_hotkey.py  test_image.py  test_ocr.py
