[project]
name = "pylinuxauto"
description = ""
authors = [
    { name = "mikigo", email = "huangmingqiang@uniontech.com" },
]
dependencies = [
    "funnylog2",
    'python3-Xlib;platform_system=="Linux" and python_version>="3.0"',
]
dynamic = [
  "version",
]
requires-python = ">=3.7"
readme = "README.md"
license = { text = "GPL2.0" }

[project.optional-dependencies]
pyscreenshot = [
    "pyscreenshot",
]

[project.scripts]
sniff = "pylinuxauto.attr.sniff.sniff:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch]
version = { path = "pylinuxauto/__version__.py" }

[tool.hatch.build.targets.wheel]
packages = [
    "/pylinuxauto",
]

